--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         mavenCentral()
@@ -18,10 +18,21 @@ buildscript {
 apply from: "variables.gradle"
 
 allprojects {
-    repositories {
-        google()
-        mavenCentral()
+  repositories {
+    google()
+    mavenCentral()
+    maven {
+      url 'https://pkgs.dev.azure.com/OutSystemsRD/9e79bc5b-69b2-4476-9ca5-d67594972a52/_packaging/PublicArtifactRepository/maven/v1'
+      name 'Azure'
+      credentials {
+        username = "optional"
+        password = ""
+      }
+      content {
+        includeGroup "com.github.outsystems"
+      }
     }
+  }
 }
 
 task clean(type: Delete) {
